[gd_scene load_steps=20 format=2]

[ext_resource path="res://Placeholders/General/Sp_Placeholder_white.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/good timing bd.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/HORIZONTAL TAB BAR/Tab button active.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/PANELS/Big panel 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/HORIZONTAL TAB BAR/Tab button default.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/SLIDERS/Slider 1/TileableProgress.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Level/Hub/Narrative enviorement/TropyWindow.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Level/Hub/Narrative enviorement/Trophy.gd" type="Script" id=8]
[ext_resource path="res://Placeholders/UI/e-key.png" type="Texture" id=9]
[ext_resource path="res://Assets/HubRoom/Trophy/trophy.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UI/ControllerSelected.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level/Hub/Narrative enviorement/TrophyCanvas.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 84
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 46
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "Appear"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.901961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Window:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Window:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 812, 800 ), Vector2( 812, 80 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.901961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Window:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Window:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 812, 80 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 33, 35 )

[node name="Trophy" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.57628e-07, 0.5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="Notification" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -44 )
scale = Vector2( 0.04375, 0.04375 )
texture = ExtResource( 9 )

[node name="ControllerSelected" parent="." instance=ExtResource( 11 )]
visible = false
margin_left = -43.0
margin_top = -95.0
margin_right = 121.0
margin_bottom = 23.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 12 )

[node name="BackGround" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0.901961 )
anchor_left = 0.529
anchor_top = 0.5
anchor_right = 0.529
anchor_bottom = 0.5
margin_left = -784.696
margin_top = -473.0
margin_right = 736.304
margin_bottom = 493.0
texture = ExtResource( 1 )
expand = true

[node name="Window" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.539
anchor_top = 0.48
anchor_right = 0.539
anchor_bottom = 0.48
margin_left = 812.0
margin_top = 80.0
margin_right = 1333.0
margin_bottom = 600.0
rect_rotation = 90.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 7 )

[node name="Title" type="Label" parent="CanvasLayer/Window"]
anchor_left = 0.181
anchor_top = 0.514
anchor_right = 0.181
anchor_bottom = 0.514
margin_left = -60.301
margin_top = 214.72
margin_right = 368.699
margin_bottom = 335.72
rect_rotation = -90.0
custom_fonts/font = SubResource( 1 )
text = "A trophy to honor the survivors of the Arena"
align = 1
valign = 1
autowrap = true

[node name="Title 2" type="Label" parent="CanvasLayer/Window/Title"]
anchor_left = 0.181
anchor_top = 0.514
anchor_right = 0.181
anchor_bottom = 0.514
margin_left = -82.649
margin_top = 77.806
margin_right = 346.351
margin_bottom = 144.806
custom_fonts/font = SubResource( 2 )
text = "Highscore"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Window"]
margin_left = 150.0
margin_top = 44.0
margin_right = 592.0
margin_bottom = 52.0
rect_rotation = 90.0
texture = ExtResource( 6 )
expand = true

[node name="Score" type="Label" parent="CanvasLayer/Window"]
anchor_left = 0.426
anchor_top = 0.525
anchor_right = 0.426
anchor_bottom = 0.525
margin_left = 55.054
margin_top = 175.936
margin_right = 433.054
margin_bottom = 276.936
rect_rotation = -90.0
custom_fonts/font = SubResource( 3 )
text = "000000"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Window"]
margin_left = 415.0
margin_top = 400.0
margin_right = 671.0
margin_bottom = 489.0
rect_rotation = -90.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/Window/TextureButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_top = 21.0
margin_right = 111.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 4 )
text = "Nice"
align = 1
valign = 1

[node name="ControllerSelected" parent="CanvasLayer/Window/TextureButton" instance=ExtResource( 11 )]
margin_left = -32.0
margin_top = -2.99897
margin_right = 132.0
margin_bottom = 115.001

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/Appear = SubResource( 5 )
anims/RESET = SubResource( 6 )
next/RESET = "RESET"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[connection signal="pressed" from="CanvasLayer/Window/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
